# SEAME-MachineLearningModel_24-25

./: .gitignore  README.md  adr_001_machine_learning.md  create_halved_filters_model.py  create_model.py  inspect_model.py  lane_test.py  python_prep.sh  test.py  train.py
cpp/: CMakeLists.txt  lib_test.cpp  notes.txt
cpp/.cache/clangd/index/: main.cpp.83F8C50306AE1926.idx  utils.cpp.3E1DA0D096504063.idx  utils.hpp.41A8AF1CD7ABD38D.idx
cpp/includes/: utils.hpp
cpp/srcs/: main.cpp  utils.cpp
cpp_tests/: lib_test.cpp  lib_test_safe.cpp  notes.txt  safe_loaded_engine.cpp  test_libraries
datasets/: generate_masks.py
docker_testing/: lane_test_nano_version.py
jetson/: Dockerfile  Dockerfile_failed  requirements.txt
jetson/cpp_tests/: lib_test.cpp
line_lane_test/: lane_test.py  pic_vs_txt.py
line_lane_test/lanes/: dark_frame_0114.txt  dark_frame_0116.txt  dark_frame_0118.txt  dark_frame_0126.txt  dark_frame_0138.txt  dark_frame_0142.txt  dark_frame_0150.txt  dark_frame_0158.txt  dark_frame_0162.txt  dark_frame_0166.txt  dark_frame_0168.txt  dark_frame_0172.txt  dark_frame_0174.txt  dark_frame_0178.txt  dark_frame_0180.txt  dark_frame_0182.txt  dark_frame_0184.txt  dark_frame_0186.txt  dark_frame_0188.txt  dark_frame_0198.txt  dark_frame_0210.txt  dark_frame_0238.txt  dark_frame_0240.txt  dark_frame_0242.txt  dark_frame_0244.txt  (+160 more)
srcs/: create_model.py
srcs_cpp/: README.md
srcs_py/: convert.py
tests/: lane_detector.py  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  xml_to_image.py
utils/: python_prep.sh
(+17 files in other folders)
